# trip-planner

./: AGENTS.md  Makefile  README.md  marimo-layout.md  pyproject.toml  test_trip_planner.py  trip_planner.py
trips/: aaaa_e531d07f.json  bizkaia_dead48ad.json  oporrak-a_c0eb2750.json  pruebaaaaaa_fbd17206.json  test-2_e978dea8.json  test_2cac5996.json
